fix(.pane): make pane class have overflow: hidden
Fixes #1218

--- a/scss/_scaffolding.scss
+++ b/scss/_scaffolding.scss
@@ -324,4 +324,5 @@ ion-infinite-scroll.active .scroll-infinite {
   width: 100%;
   height: 100%;
   background-color: $base-background-color;
+  overflow: hidden;
 }
